# chopper3d

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
models/bullet/: bullet.glb
models/chopper/: chopper.glb
models/cloud/: cloud.glb
models/ground/: ground.glb
models/mountain/: mountain.glb
models/splash/: chopper3d.glb
models/sun/: sun.glb
models/tank/: tank.glb
shaders/: doodle.frag.glsl  doodle.vert.glsl  std.frag.glsl  std.vert.glsl
src/: Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Command.h  Controller.cpp  Controller.h  Doodle.cpp  Doodle.h  Dynamic.h  Event.cpp  Event.h  Input.cpp  Input.h  Manager.cpp  Manager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Player.cpp  Player.h  Queue.cpp  Queue.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Tank.cpp  Tank.h  Triangle.cpp  Triangle.h  Window.cpp  Window.h  main.cpp
src/commands/: Shoot.cpp  Shoot.h
