bin_PROGRAMS = chopper
chopper_SOURCES = src/Camera.cpp src/Doodle.cpp src/Input.cpp src/main.cpp src/Mesh.cpp src/Model.cpp src/Scene.cpp src/Shader.cpp src/Window.cpp
chopper_CXXFLAGS = -Werror -Wall -Wextra -g -pedantic -std=gnu++20 $(GLEW_CFLAGS) $(SDL_CFLAGS) $(GLM_CFLAGS) $(ASSIMP_CFLAGS)
chopper_LDADD = $(GLEW_LIBS) $(SDL_LIBS) $(GLM_LIBS) $(ASSIMP_LIBS)
