bin_PROGRAMS = chopper
chopper_SOURCES = src/Bullet.cpp src/Camera.cpp src/Controller.cpp src/Doodle.cpp src/Event.cpp src/Input.cpp src/main.cpp src/Manager.cpp src/Mesh.cpp src/Model.cpp src/Player.cpp src/Queue.cpp src/Scene.cpp src/Shader.cpp src/Window.cpp
chopper_CXXFLAGS = -Werror -Wall -Wextra -g -pedantic -std=gnu++20 $(GLEW_CFLAGS) $(SDL_CFLAGS) $(GLM_CFLAGS) $(TINYGLTF_CFLAGS)
chopper_LDADD = $(GLEW_LIBS) $(SDL_LIBS) $(GLM_LIBS) $(TINYGLTF_LIBS)
